infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: chupacabra
spec: {}
status: {}
