infra/gw-deploy.yaml
#
# gateway k8s deployment and service
# kubectl create deployment gw-deploy --image=nginx:1.23.1 --replicas=2 --namespace=chupacabra --port=80 --dry-run=client -o yaml
#
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gw-deploy
  name: gw-deploy
  namespace: chupacabra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gw-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gw-deploy
    spec:
      containers:
      - image: nginx:1.23.1
        name: gw-http
        ports:
        - name: gw-http
          containerPort: 80
        resources: {}
status: {}
---
#
# kubectl create service nodeport gw-deploy -n chupacabra --tcp=80 --dry-run=client -o yaml 
#
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gw-deploy
  name: gw-deploy
  namespace: chupacabra
spec:
  ports:
  - name: "gw-port"
    port: 8088
    protocol: TCP
    targetPort: gw-http
  selector:
    app: gw-deploy
  type: NodePort
status:
  loadBalancer: {}
