infra/gw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-ingress
  namespace: chupacabra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: chupacabra.braingang.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gw-deploy
            port:
              number: 8088
